2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Changes due to recent dom parser changes.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: Fixed inner types.

2008-07-13  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Worked on ctrl+space completion.

2008-07-13  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.

2008-07-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs: Some code
	  completion fixes.

2008-07-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewOverrideCompletionData.cs, Gui/CSharpAmbience.cs,
	  Gui/CSharpTextEditorCompletion.cs, Parser/DomParser.cs: Added C#
	  ambience for new dom. Worked on override completion.

2008-07-11  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewOverrideCompletionData.cs, Gui/NewCSharpExpressionFinder.cs,
	  Gui/OverrideCompletionData.cs, Gui/CSharpTextEditorCompletion.cs,
	  Parser/DomParser.cs: Worked on code completion.

2008-07-11  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs,
	  Gui/CSharpTextEditorExtension.cs: Added xml/preprocessor completion
	  to the new completion class.

2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs, Parser/DomParser.cs: Worked on
	  code completion.

2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* CSharpBinding.addin.xml: accidentally checked in new code completion
	  enabled addin file.

2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/NewCSharpExpressionFinder.cs,
	  Gui/CSharpTextEditorCompletion.cs, Parser/DomParser.cs: Worked on
	  code completion. Added new expression finder from sharpdevelop3