@@ -1,3 +1,7 @@
+2008-07-15  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/NRefactoryResolver.cs: Fixed possible null reference exception.
+
 2008-07-14  Mike Krüger <mkrueger@novell.com> 
 
 	* Parser/DomParser.cs: Changes due to recent dom parser changes.
